--- a/cursoHTMLycss/style.css
+++ b/cursoHTMLycss/style.css
@@ -245,4 +245,18 @@ Aplica una determinada caracteristicas a diferentes etiquetas pero excluyendo a 
     width: 560px;
     margin: 1em auto;
 }
+@media screen and (max-width:480px) {
+    h1{
+        text-align: center;
+    }
+    nav{
+        position: static;
+    }
+    .caja, .principal,.mapa,.contenido-diferenciales, .video{
+        width: auto;
+    }
+    .lista-diferenciales, .imagenDifere{
+        width: auto;
+    }
+}
 /*css para nuestra home*/
